# TanCloudPC

./: CMakeLists.txt  README.md
doc/: 需求分析.md
resource/icon/: icon.qrc
src/File/: CMakeLists.txt  HomePage.cpp  HomePage.ui  HomePage.ui.autosave  README.md
src/Form/SideButton/: CMakeLists.txt  SideButton.cpp  SideButton.h
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  icon.qrc
src/Setting/: README.md
src/Share/: CMakeLists.txt  README.md  Share.cpp  Share.h  Share.ui
src/Transfer/: CMakeLists.txt  Transfer.cpp  Transfer.ui
